--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 12
+      nodejs: 13
     commands:
       - echo Installing packages...
       - export PUPPETEER_DOWNLOAD_HOST=https://npm.taobao.org/mirrors
@@ -13,7 +13,10 @@ phases:
       - echo Build started on `date`
       #- npm run lint
       #- npm run test:ci
-      - npm run build$ENV
+      - npm run build:$ENV
+      - pwd
+      - ls -l
+      - aws s3 sync ./dist/ s3://$CODE_ARTIFACT_BUCKET --delete
   post_build:
     commands:
       - echo Build completed on `date`
