--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "buildprod": "ng build --configuration='production'",
-    "buildsi": "ng build --configuration='int'",
-    "builddvl": "ng build --configuration='dev'"
+    "buildprod": "ng build --configuration=production",
+    "buildsi": "ng build --configuration=int",
+    "builddev": "ng build --configuration=dev"
   },
   "private": true,
   "dependencies": {
