--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 10
+      nodejs: latest
     commands:
       - echo Installing packages...
       - export PUPPETEER_DOWNLOAD_HOST=https://npm.taobao.org/mirrors
@@ -11,6 +11,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - ng  -v
       #- npm run lint
       #- npm run test:ci
       - npm run build$ENV
