--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
       - echo Installing packages...
       - export PUPPETEER_DOWNLOAD_HOST=https://npm.taobao.org/mirrors
-      - npm install && npm install -g @angular/cli@12.2.1
+      - npm install && npm install -g @angular/cli
   build:
     commands:
       - echo Build started on `date`
@@ -17,7 +17,8 @@ phases:
       - npm run build$ENV
       - pwd
       - ls -l
-      - aws s3 sync ./dist/ s3://$CODE_ARTIFACT_BUCKET --delete
+      - cd  ./dist/pdf-pw-remover
+      - aws s3 sync ./ s3://$CODE_ARTIFACT_BUCKET --delete
   post_build:
     commands:
       - echo Build completed on `date`
