added deploy spec

--- a/deployspec.yml
+++ b/deployspec.yml
@@ -4,8 +4,12 @@ phases:
   build:
     commands:
       - echo Deployment started on `date`
-      # - . ./script/exports.sh
-      - aws s3 sync dist/ s3://${BUCKET_NAME} --cache-control max-age=31536000
+      - echo Copying files to S3 Bucket
+      - ls -l
+      - cd  ./dist/pdf-pw-remover
+      #copy dist folder to SPA  S3 Bucket
+      - aws s3 sync ./ s3://$CODE_ARTIFACT_BUCKET --delete
+      - echo Build completed on `date`
   post_build:
     commands:
       - echo Deployment completed on `date`
