--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,15 +15,16 @@ phases:
       #- npm run lint
       #- npm run test:ci
       - npm run build$ENV
-      - pwd
-      - ls -l
-      - cd  ./dist/pdf-pw-remover
-      - aws s3 sync ./ s3://$CODE_ARTIFACT_BUCKET --delete
+           
   post_build:
     commands:
+      - echo Copying files to S3 Bucket
+      - ls -l
+      - cd  ./dist/pdf-pw-remover
+      #copy dist folder to SPA  S3 Bucket
+      - aws s3 sync ./ s3://$CODE_ARTIFACT_BUCKET --delete
       - echo Build completed on `date`
 artifacts:
   files:
     - deployspec.yml
     - dist/**/*
-    - script/exports.sh
